--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "mocha": "^3.0.2",
     "mocha-lcov-reporter": "^1.2.0",
     "nyc": "^8.1.0",
-    "react": "^15.3.2",
-    "react-addons-css-transition-group": "^15.3.2",
-    "react-addons-test-utils": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
+    "react": "^16.0.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-mock-store": "^1.2.1",
@@ -68,5 +68,8 @@
     "test": "mocha --require babel-register --require ignore-styles test/*.spec.js*",
     "coverage": "nyc --extension .jsx npm test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
+  },
+  "dependencies": {
+    "prop-types": "^15.6.0"
   }
 }
